aligned boxes properly, added text where possible - next alignment needs to be added, hyperlinks fixed, and 'feel me' button needs to be added

--- a/Project01/Assets/stylesheets/stylesheet.css
+++ b/Project01/Assets/stylesheets/stylesheet.css
@@ -116,11 +116,17 @@ body{
 	}
 	h4{
 			text-align: left;
-			font-size:12px;
+			font-size:14px;
 	}
 	h5{
 			text-align: center;
 	}
-	h6{}
+	h6{
+		text-align: left;
+			font-size:14px;
+	}
 	h7{}
-	h8{}
+	a{text-align: left;
+			font-size:15px;
+
+}
